Small variable fix for spacing

--- a/styles/variables.less
+++ b/styles/variables.less
@@ -983,15 +983,15 @@
 // Steps
 // ---------------------------------------
 @lime-steps-step-number-font-weight: 600;
-@lime-steps-step-margin: 0 var(--ref-spacing-30);
+@lime-steps-step-margin: 0 var(--primitive-spacing-30);
 @lime-steps-step-current-opacity: 1;
 @lime-steps-step-future-opacity: 1;
 @lime-steps-step-highlight-current-only-future-opacity: 1;
 @lime-steps-pageindicator-size: 18px;
-@lime-steps-pageindicator-margin: 0 var(--ref-spacing-12);
-@lime-steps-pageindicator-border-radius: var(--ref-border-radius-full);
+@lime-steps-pageindicator-margin: 0 var(--primitive-spacing-12);
+@lime-steps-pageindicator-border-radius: var(--semantic-radius-full);
 @lime-steps-pageindicator-current-size: 24px;
-@lime-steps-pageindicator-current-margin: 0 var(--ref-spacing-6);
+@lime-steps-pageindicator-current-margin: 0 var(--primitive-spacing-6);
 
 // Switch
 // ---------------------------------------
